2011-02-05 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Do not disable internal messages gathering when using -bL
	for proper display after Ctrl-C interruption (#133).

2011-01-15 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.4 released.

	* NodeSet.py: Add docstring for NodeSet string arithmetics (, ! & ^),
	which is also called extended string pattern (trac ticket #127).

2010-12-14 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.4 beta 1 released.

	* CLI/Display.py: In buffer header (for -b/-B without -L), print node
	count in brackets if > 1 and enabled by configuration (trac ticket #130).
	
	* CLI/Config.py: Add boolean node_count param (part of trac ticket #130).

2010-12-08 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Nodeset.py: Support nodeset --split option (trac ticket #91).

	* CLI/OptionParser.py: Add --split option (part of #91).

	* NodeSet.py: Avoid overflow by returning truncated results when there are
	not enough elements in the set for RangeSet.split(n) and NodeSet.split(n).

2010-12-02 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Much improved algorithm for RangeSet.add_range().

2010-11-30 S. Thiell <stephane.thiell@cea.fr>

	* Worker/{Popen,Pdsh,Ssh}.py: Tell system to release associated resources
	with the child process on abort.

2010-11-30 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Popen.py: Fix stderr pipe leak (trac ticket #121).
	* Worker/Ssh.py: Fix stderr pipe leak (trac ticket #121).
	* Worker/Pdsh.py: Fix stderr pipe leak (trac ticket #121).

	* tests/TaskRLimitsTest.py: New test.

2010-11-28 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Optimized NodeSet.__getitem__() (trac ticket #18).

2010-11-25 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Slice-optimized version of RangeSet.__getitem__().

2010-11-03 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Added --rcopy support (trac ticket #55).

	* Task.py: Added rcopy() method (part of trac ticket #55).
